<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbgg"
    tools:context=".RandomKorean"
    android:orientation="vertical"> <!-- Set orientation here -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_korean"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/korean_tool"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Body2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <ImageView
            android:id="@+id/clock_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/food_icon" />

        <TextView
            android:id="@+id/TasteTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/TasteTap"
            android:textSize="36sp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/food_view"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/pic" />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_layout"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/random_button"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/app_random_button"
                android:textColor="@color/randomButt"
                android:backgroundTint="@color/randomButtBgT"
                android:elevation="4dp"
                android:layout_marginBottom="16dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/result_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:elevation="2dp"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:backgroundTint="@color/yes"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>
